# acacore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: on-push.yml  test.yml
acacore/: __init__.py
acacore/database/: __init__.py  base.py  column.py  cursor.py  database.py  files_db.py  table.py  table_keyvalue.py  table_view.py  update.py  upgrade.py
acacore/exceptions/: __init__.py  base.py  files.py
acacore/models/: __init__.py  base.py  event.py  file.py  file_data.py  history.py  identification.py  metadata.py  reference_files.py
acacore/reference_files/: __init__.py  get.py  ref_files.py
acacore/siegfried/: __init__.py  siegfried.py
acacore/siegfried_utils/: __init__.py  identify.py
acacore/tests/: file_action_enum_tests.py
acacore/utils/: __init__.py  click.py  decorators.py  functions.py  helpers.py  io.py  log.py
src/acacore/: __init__.py
src/acacore/database/: column.py  cursor.py  database.py  files_db.py  query.py  table.py  table_keyvalue.py  table_view.py  upgrade.py
src/acacore/exceptions/: __init__.py  base.py  files.py
src/acacore/models/: __init__.py  base.py  event.py  file.py  reference_files.py
src/acacore/reference_files/: __init__.py  get.py
src/acacore/siegfried/: __init__.py  siegfried.py
src/acacore/utils/: __init__.py  click.py  decorators.py  functions.py  helpers.py  io.py  log.py
tests/: conftest.py  file_action_enum_tests.py  linting.py  test_database.py  test_exceptions.py  test_models_event.py  test_models_file.py  test_reference_files.py  test_siegfried.py  test_utils.py
tests/databases/: v4_0_0.db  version1.db
tests/files/: files.json  json.json  lwp.lwp  txt.txt
tests/siegfried/: pronom.sig
