[tool.poetry]
name = "acacore"
version = "0.1.0"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7"
databases = {extras = ["sqlite"], version = "^0.4.1"}
sqlalchemy-views = "^0.2.4"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
