[tool.poetry]
name = "acacore"
version = "1.2.0"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
pyyaml = "^6.0.1"
pillow = "^10.3.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
black = "^23.7.0"
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
    "C",
    "E",
    "F",
    "W",
    # "B", Will ask for some refactoring of error handling
    "I",
    # "C90", Checks for complexity, might be good but not essential
    # "N", Will force us to redo the naming of several functions
    "D",
    "UP",
    "YTT",
    "ANN",
    # "S", Will help us have secure calls to sub.process and such, might be good
    "BLE",
    # "FBT", Will asks us to remove boolean flags
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLE",
    # "PLR", Will suggest several large refactoring
    "PLW",
    # "TRY", Will help with our exception handling
    "RUF",
]
ignore = [
    "E501",    # line to long, to many false positives, gets handled by black
    "ANN002",  # missing type anottation for *args
    "ANN003",  # missing type anotation for **kwargs
    "ANN101",  # missing type for self
    "ANN102",  # missing type for cls
    "ANN201",  # missing return type
    "ANN202",  # missing return type
    "ANN206",  # missing return type
    "ARG001",  # missing type anotattion for args
    "BLE001",  # catching general exceptions
    "D100",    # missing docstring
    "D101",    # missing docstring
    "D102",    # missing docstring
    "D103",    # missing docstring,
    "D104",    # missing docstring,
    "D105",    # missing docstring in magic method,
    "D106",    # missing docstring in nested class,
    "D107",    # missing docstring in __init__,
    "D203",    # 0 blank line required before class docstring,
    "D204",    # 1 blank line required after class docstring,
    "D212",    # multi-line docstring summary should start at the first line,
    "D213",    # multi-line docstring summary should start at the second line,
    "D300",    # use triple docstring
    "DTZ005",  # datetime.datetime.now() called without a tz argument
    "E712",    # comparison to True/False, we ignore because we use sqlalchemy
    "FBT001",  # boolean arguement in function definition
    "N802",    # name of function should be lower case
    "PLR2004", # magic value used in comparison
    "PT012",   # ptest.raises should contain a simple statement
    "RET505",  # unnecessary {branch} after return statement
    "S101",    # use of assert,
    "TRY003",  # avoid using long messages outside exception class
    "UP007",   # not using | in type anotations
    "INP001",  # implicit namespace without __init__ (throws errors in tests)
    "PLW2901", # redefing loop variables
    "C901",    # complexity check
    "ISC001",  # check for implicit concatanation of str on one line, not compatabil with black.
]
exclude = [
    ".venv",
    "env",
    "venv",
    ".git",
    "__pycache__",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    "__init__.py"
]

[tool.ruff.isort]
combine-as-imports = false
force-single-line = true
order-by-type = false

[tool.ruff.pydocstyle]
convention = "google"
ignore-decorators = ["pytest.fixture"]

[tool.ruff.pycodestyle]
max-doc-length = 300 # We dont care about length of docstrings
